dash/frontend/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@use '@angular/material' as mat;
@include mat.core();

html, body { height: 100%;} // login page requires 100%
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

@import '@angular/material/theming';
@import './app/modules/private/private.component.theme';
@import 'flexboxgrid/css/flexboxgrid.min.css';
@import 'codemirror/lib/codemirror';
@import 'codemirror/theme/material';

//Default theme
$ms-default-primary: mat.define-palette(mat.$indigo-palette, 800, 300, 900);
$ms-default-accent: mat.define-palette(mat.$light-blue-palette);
$ms-default-warn: mat.define-palette(mat.$pink-palette, 600);

$ms-button-styling: mat.define-typography-level(
  $font-family: "Roboto, 'Helvetica Neue', sans-serif",
  $font-weight: 600,
  $font-size: 14px,
  $line-height: 48px,
  $letter-spacing: normal,
);

$ms-default-theme: mat.define-light-theme((
  color: (
    primary: $ms-default-primary,
    accent: $ms-default-accent,
    warn: $ms-default-warn
  ),
  typography: mat.define-typography-config(
    $font-family: "Roboto, 'Helvetica Neue', sans-serif",
    $button: $ms-button-styling,
  ),
));

//<app-root></app-root> theme
@import "./app/app.component.theme";
@import './app/modules/private/pages/dashboard/dashboard.component.theme';
@import './app/modules/private/pages/cluster/cluster-details/cluster-details.component.theme';
@import './app/modules/private/pages/cluster/cluster-list/cluster-list.component.theme';
@import './app/modules/private/pages/organization-settings/organization-settings.component.theme';
@import './app/modules/private/pages/cluster/cluster-summary/cluster-summary.component.theme';
@import './app/modules/private/pages/audit-log/audit-log-list/audit-log.component.theme';



@mixin custom-components-theme($theme) {
  @include app-root-theme($theme);
}

@mixin custom-dashboard-component-theme($theme) {
  @include dashboard-component-light-theme($theme);
}

@mixin custom-cluster-details-component-theme($theme){
  @include cluster-details-component-light-theme($theme);
}

@mixin custom-toolbar-light-theme($theme) {
  @include toolbar-light-theme($theme);
}

@mixin custom-organization-settings-light-theme($theme) {
  @include organization-settings-component-light-theme($theme)
}

@mixin custom-audit-log-light-theme($theme) {
  @include audit-log-component-light-theme($theme)
}


.default-theme {
  @include angular-material-theme($ms-default-theme);
  @include custom-components-theme($ms-default-theme);
  @include custom-dashboard-component-theme($ms-default-theme);
  @include custom-cluster-details-component-theme($ms-default-theme);
  @include custom-toolbar-light-theme($ms-default-theme);
  @include custom-organization-settings-light-theme($ms-default-theme);
  @include custom-audit-log-light-theme($ms-default-theme);
}

button {
  @include app-root-theme($ms-default-theme);
}

.mat-mdc-dialog-container .mdc-dialog__content {
  --mdc-dialog-supporting-text-color: rgba(0, 0, 0, 1);
}

 .mat-mdc-dialog-container {
  padding: 20px;
  margin-left: 20px;

}
  // falco dialog height
  mat-mdc-dialog-container, .mat-mdc-dialog-container .mdc-dialog__container, .mat-mdc-dialog-container .mdc-dialog__surface {
    height: fit-content;
   // overflow-y: auto;
  }


// organization menu text
.organization-settings-text {
  font-size: 16px !important;
  vertical-align: center;
  text-align: center;
  margin: 8px;

}

@media print {
  html, body {
    height: auto;
    print-color-adjust: exact !important;
    -webkit-print-color-adjust:exact !important
  }
}

.no-padding{
  padding: 0;
}

.margin-top-10{
  margin-top: 10px;
}

.padding-top-10{
  padding-top: 10px;
}
.padding-top-15 {
  padding-top:15px;
  padding-left: 0px;
}
.padding-left-3 {
  padding-left: 3%;
}

.negative-margin-bottom-20{
  margin-bottom: -20px;
}

.margin-right-10{
  margin-right: 10px;
}

.text-align-right{
  text-align: right;
}

.margin-bottom-20{
  margin-bottom: 20px;
}

.margin-bottom-2{
  margin-bottom: 2px;
}

.negative-margin-bottom-8 {
  margin-bottom: -8px;
}

.font-size-20{
  font-size: 20px;
}

.margin-left-7{
  margin-left: 7px;
}

.justify-content-center{
  justify-content: center;
}

.margin-bottom-6{
  margin-bottom: 6px;
}

.image-id-tooltip {
  word-break: break-all !important;
  white-space: normal !important;
}

.table-format table {
  width: 100%;
  border: 1px #AAA solid ;
  border-collapse: collapse
}

.table-format td, .table-format th {
  border: 1px #AAA solid ;
  margin: 0px;
  padding: 2px;
  border-collapse: collapse;
  vertical-align: baseline;
}
.mat-icon{
  //vertical-align: bottom;
  //padding-left: 10px;
  // margin:10px;
}
.mat-mdc-icon-button{
  margin: 5px;
}
.mat-mdc-dialog-container .mdc-dialog__surface {
  padding:10px;
}

app-private {
  display: flex;
  flex-direction: column;
  height: 100%
}

.main-content {
  flex: 1;
  height: auto;
  margin-top: 0px !important
}

// Org setting pages uses app-sub-navigation for titles and buttons
// The following are for lining up other page elements
.mat-mdc-card-header{
  display: flex;
  padding: 0;
  margin-left: 0px;
}
.page-container {
  height: 100%;
  display: block;
  flex: 1;
  width: 100%;
  overflow: auto;
  background-color: mat.get-color-from-palette(mat.$gray-palette, 300); // for containers without theme applied
}
.page-container-content{
  margin: 20px;
  // width:fit-content;
}
.page-card{
  margin: 0px;
  overflow-x: auto;
}
.page-card-header{
  display:flex;
  padding:0px;
  margin-left: 0px;
  width: 100%;
}
.page-card-title{
  font-size: 20px;
  font-weight: bold;
  line-height: 3;
}
.page-card-content{
  margin-bottom: 30px;
}
.page-card-line-content {
  display: flex;
}
.page-card-title-button-group-right-align{
  text-align: right;
  padding:0px;
}
.page-card-left-align {
  margin-left: 0px;
}
.page-table-container-with-paginator{
  width: fit-content; // align paginator with table width
  overflow: auto;
}
/* ... */

